# RenderEngine

./: .gitignore  CMakeLists.txt  _build  main.cpp
cuda/: helpers.cu  kernels.cpp  kernels.cu
include/: Coordinates.h  RenderEngine.h  Structs.h  ViewPort.h  helpers.h  kernels.h
src/components/: HitDetection.cpp  Ray.cpp  RaySurfaceIntersection.cpp  Vector3D.cpp
src/environment/: Light.cpp  Object.cpp  Scene.cpp
src/environment/surfaces/: Sphere.cpp  Triangle.cpp
src/renderEngine/: ViewPort.cpp
tests/: HelpersTest.cu  IntegrationTest.cu  LandscapeTest.cu  LineTest.cu  TriangleTest.cu  VectorTest.cu
